[package]
name = "game-tools"
version = "0.1.0"
description = "一个游戏辅助工具"
authors = ["urnotzane"]
license = "MIT"
repository = "https://github.com/urnotzane/game-tools.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-size", "window-set-fullscreen", "dialog-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
teemo = { version = "0.1.3-beta.2"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
