[package]
name = "game-tools"
version = "0.2.1"
description = "Game Tools"
authors = ["urnotzane"]
license = "MIT"
repository = "https://github.com/urnotzane/game-tools.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "window-set-size", "window-set-fullscreen", "dialog-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
teemo = { version = "0.2.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
